tests/NormalTests/paczka1/fuzzy1/83718110.err
Error in line 3: JRG0DYWf A116 66,4
Error in line 7: jcOPSWgTL S43 63,0
Error in line 11: JRG0DYWf S392 11,5
Error in line 13: jcOPSWgTL A170 38,4
Error in line 27: Rn7uSz8A S392 28,8
Error in line 36: jcOPSWgTL A116 67,95
